feat(spring-boot): support container-managed executor injection via atmosphereExecutor bean